# Heart-Attack-Prediction

./: EDA.ipynb  analysis.ipynb  anot.txt  app.py  postgres-ollama-chromadb.ipynb  pyproject.toml  requirements.txt  teste.py
artifacts/: heart_attack_model.pkl  model_metadata.json  preprocessor.pkl
notebooks/: EDA.ipynb  modeling.ipynb
src/: EDA_utils.py
src/pipeline/: feature_eng_pipeline.py  inference_pipeline.py  model_pipeline.py  train_pipeline.py
