[project]
name = "heart-attack-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "category-encoders>=2.8.1",
    "lightgbm>=4.6.0",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
